tests/pass/tests_only_for_scanner/ShiftRightAssign.java
package pass;

public class ShiftRightAssign {
    public int shiftRightAssign(int x, int y) {
        x >>= y;
        return x;
    }
}
