tests/fail/ShiftRightAssign.java
package fail;

public class ShiftRightAssign {
	public static void main ( String [] args ) {
		System.out.println('a' >>= 42);
	}
}
